File: testsuite/nexus-docker-testsupport/pom.xml